--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
+beautifulsoup4==4.4.1
+bs4==0.0.1
 Flask==0.10.1
 gunicorn==19.4.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+numpy==1.11.1
+peewee==2.8.1
+python-dateutil==2.5.3
+pytz==2016.4
 requests==2.9.1
+six==1.10.0
 Werkzeug==0.11.3
 wheel==0.24.0
