--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,10 @@ beautifulsoup4==4.4.1
 bs4==0.0.1
 Flask==0.10.1
 gunicorn==19.4.1
+html5lib==0.9999999
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
-numpy==1.11.1
-peewee==2.8.1
 python-dateutil==2.5.3
 pytz==2016.4
 requests==2.9.1
