--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,34 @@
+altgraph==0.12
 beautifulsoup4==4.4.1
-bs4==0.0.1
+blinker==1.4
+discogs-client==2.2.1
 Flask==0.10.1
+Flask-Navigation==0.2.0
 Flask-WTF==0.12
-gunicorn==19.4.1
 html5lib==0.9999999
+httplib2==0.9.2
 itsdangerous==0.24
 Jinja2==2.8
+macholib==1.7
 MarkupSafe==0.23
+mechanize==0.2.5
+modulegraph==0.12.1
 MySQL-python==1.2.5
-python-dateutil==2.5.3
-pytz==2016.4
+oauth2==1.9.0.post1
+oauthlib==1.0.3
+passlib==1.6.5
+pbr==1.8.1
+Pillow==3.2.0
+py2app==0.10
+pyobjc-core==3.1.1
+python-ntlm3==1.0.2
 requests==2.9.1
+requests-ntlm==0.3.0
+scapy==2.3.2
 six==1.10.0
+stevedore==1.10.0
+virtualenv==14.0.5
+virtualenv-clone==0.2.6
+virtualenvwrapper==4.7.1
 Werkzeug==0.11.3
-wheel==0.24.0
 WTForms==2.1
