--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 MySQL-python==1.2.5
+passlib==1.6.5
 python-dateutil==2.5.3
 pytz==2016.4
 requests==2.9.1
