--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 cloudinary==1.5.0
+coverage==4.5.2
 Flask==0.10.1
 Flask-Script==2.0.5
 Flask-WTF==0.12
@@ -11,4 +12,4 @@ pytz==2016.4
 six==1.10.0
 urllib3==1.19.1
 Werkzeug==0.11.3
-wheel==0.24.0
+WTForms==2.2.1
