--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-cloudinary==1.5.0
+certifi==2018.11.29
+Click==7.0
 coverage==4.5.2
-Flask==0.10.1
-Flask-Script==2.0.5
-Flask-WTF==0.12
-gunicorn==19.4.1
-itsdangerous==0.24
-Jinja2==2.8
-MarkupSafe==0.23
-python-dateutil==2.5.3
-pytz==2016.4
-six==1.10.0
-urllib3==1.19.1
-Werkzeug==0.11.3
-WTForms==2.2.1
+Flask==1.0.2
+Flask-Script==2.0.6
+funcsigs==1.0.2
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.1
+mock==2.0.0
+pbr==5.1.3
+python-dateutil==2.8.0
+pytz==2018.9
+six==1.12.0
+urllib3==1.24.1
+Werkzeug==0.14.1
